# owe

./: .dockerignore  .gitignore  .gitmodules  README.md  agents.example.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-build-manually.yaml
owe/agent_manager/: agent_manager.py  user_agent.py  user_agent_config.py
owe/owe_agent/: agent_config.py  celery.py  custom_llm.py  llm_task.py  owe_agent.py  remote_llm.py  remote_sd_tool.py  sd_task.py  stable_diffusion_tool.py  worker.py
owe/telegram/: bot.py
