[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "owe"
authors = [{ name = "lukew", email = "lukew@crynux.ai" }]
description = "Owe agent platform"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "langchain==0.3.7",
    "langgraph==0.2.45",
    "accelerate==1.1.1",
    "bitsandbytes==0.44.1",
    "transformers==4.46.2",
    "python-dotenv==1.0.1",
    "python_telegram_bot==21.7",
    "celery[redis]==5.4.0"
]
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["owe*"]
